Fix checkstyle errors.
Signed-off-by: MaxKsyunz <maxk@bitquilltech.com>